--- a/main.ipynb
+++ b/main.ipynb
@@ -2,21 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-01T17:12:31.950062400Z",
-     "start_time": "2024-12-01T17:12:28.450947500Z"
+     "end_time": "2024-12-02T15:10:11.722899Z",
+     "start_time": "2024-12-02T15:10:03.393676Z"
     }
    },
+   "source": "!pip install pymupdf pytesseract Pillow",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymupdf in c:\\users\\joshu\\pycharmprojects\\pdfscraper\\.venv\\lib\\site-packages (1.24.14)Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: pymupdf in c:\\users\\jd\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.24.14)\n",
+      "Requirement already satisfied: pytesseract in c:\\users\\jd\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.3.13)\n",
+      "Requirement already satisfied: Pillow in c:\\users\\jd\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (11.0.0)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\jd\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pytesseract) (23.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -24,36 +28,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 23.2.1 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Requirement already satisfied: pytesseract in c:\\users\\joshu\\pycharmprojects\\pdfscraper\\.venv\\lib\\site-packages (0.3.13)\n",
-      "Requirement already satisfied: Pillow in c:\\users\\joshu\\pycharmprojects\\pdfscraper\\.venv\\lib\\site-packages (11.0.0)\n",
-      "Requirement already satisfied: packaging>=21.3 in c:\\users\\joshu\\pycharmprojects\\pdfscraper\\.venv\\lib\\site-packages (from pytesseract) (24.2)\n"
+      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
+      "[notice] To update, run: C:\\Users\\Jd\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
-   "source": [
-    "!pip install pymupdf pytesseract Pillow"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracted text updated in DATASET_AP_FINALdipasure - SDG 16.csv.\n"
-     ]
-    }
-   ],
    "source": [
     "import fitz  #PyMuPDF\n",
     "import pytesseract\n",
@@ -62,7 +45,7 @@
     "import io\n",
     "import csv\n",
     "\n",
-    "pdf_dir = \"pdf_files_sdg16\"  #change to pdf directory\n",
+    "pdf_dir = \"pdf_files_sdg6\"  #change to pdf directory\n",
     "csv_file_path = \"DATASET_AP_FINALdipasure - SDG 16.csv\"   #change to where the extracted text will be saved\n",
     "\n",
     "extracted_texts = []\n",
@@ -94,7 +77,6 @@
     "                image_bytes = base_image[\"image\"]\n",
     "                image_ext = base_image[\"ext\"]\n",
     "\n",
-    "                #load image using PIL\n",
     "                image = Image.open(io.BytesIO(image_bytes))\n",
     "\n",
     "                #perform OCR on the image\n",
@@ -113,7 +95,7 @@
     "        if len(row) > 1 and row[1].strip() in (\"\", \"<null>\"):\n",
     "            if extracted_texts:\n",
     "                row[1] = extracted_texts.pop(0)\n",
-    "                row[headers.index(\"LABEL/S (SDG)\")] = \"16\"  # Set 'label' column to '16'\n",
+    "                row[headers.index(\"LABEL/S (SDG)\")] = \"6\"  # Set 'label' column to '16'\n",
     "\n",
     "        updated_rows.append(row)\n",
     "\n",
@@ -128,12 +110,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-02T14:43:13.905648500Z",
-     "start_time": "2024-12-02T14:34:28.409607200Z"
+     "end_time": "2024-12-02T15:28:05.380657Z",
+     "start_time": "2024-12-02T15:27:15.873646Z"
     }
    },
    "id": "ac4c11a5c24b34df",
-   "execution_count": 4
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted text updated in DATASET_AP_FINALdipasure - SDG 16.csv.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
